# SirsiNexusApp

./: .cache-refresh  .deploy-now  .deploy-test  .deploy-trigger  .deployment-fresh  .firebaserc  .github-pages-cache-bust-1752718800  .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATABASE_ARCHITECTURE_OPTIMIZATION.md  DEPLOYMENT.md  DEPLOYMENT_CONTINUATION_PROMPT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_RESUMPTION_PLAN.md  ELITE_RESUMPTION_PROMPT.md  GEMINI.md  GITHUB_REPOSITORY_SETUP.md  GITHUB_SEO_STRATEGY.md  HARD_ASSESSMENT_REPORT.md  PLATFORM_SETUP.md  PRODUCTION_READINESS_IMPLEMENTATION_PLAN.md  README.md  RESUMPTION_PROMPT.md  RESUMPTION_PROMPT_OLD.md  SETUP_GUIDE.md  SIMPLE_WORKFLOW.txt  SIRSI_HYPERVISOR_SUCCESS.md  SIRSI_PERSONA_INTEGRATION_COMPLETE.md  SIRSI_PERSONA_WORKING_SYSTEM_REPORT.md  STRIPE_UCS_ACTIVATION_PROMPT.md  VERSION  WARP_RULES_CONTENT.md  WARP_VISUAL_GUIDE.md  _config.yml  business-case.html  business_process_test.js  committee-investor-bridge.html  (+61 more)
.github/: dependabot.yml
.warp/: README.md
analytics-platform/: __init__.py  pytest.ini  requirements.txt  requirements_clean.txt  setup.py
cockroach-data/: 000451.sst  000452.sst  000453.sst  000454.sst  000455.sst  000456.sst  000457.sst  MANIFEST-000001  MANIFEST-000256  OPTIONS-000258  STORAGE_MIN_VERSION  cockroach.advertise-sql-addr  cockroach.http-addr
committee/: index.html
components/: ui-library.js
config/: default.yaml
core-engine/: Cargo.toml  build.rs
core-engine/config/: default.yaml
core-engine/docs/: OPERATIONS_GUIDE.md
core-engine/migrations/: 20250625143000_add_user_name.sql  20250625143001_make_name_not_null.sql  20250711154500_add_encrypted_credentials.sql
core-engine/proto/sirsi/agent/v1/: sirsi_interface.proto
core-engine/proto/sirsi/v1/: infrastructure.proto  sirsi_service.proto
core-engine/scripts/: setup-db.sh
core-engine/src/: error.rs  hypervisor.rs  lib.rs  main.rs
core-engine/src/agent/: context.rs  coordinator.rs  loader.rs  manager.rs  mod.rs  service.rs  sirsi_interface.rs
core-engine/src/agent/connectors/: aws.rs  azure.rs  gcp.rs  mod.rs
core-engine/src/agent/implementations/: aws.rs  azure.rs
core-engine/src/ai/: hypervisor_enhanced.rs  mod.rs  multi_cloud_orchestration.rs
core-engine/src/ai/communication/: mod.rs
core-engine/src/ai/consciousness/: mod.rs
core-engine/src/ai/orchestration/: engine.rs
core-engine/src/ai/persona/: mod.rs
core-engine/src/api/: mod.rs  orchestration.rs  port_registry.rs  sirsi_persona.rs
core-engine/src/cli/: mod.rs  ports.rs
core-engine/src/config/: mod.rs
core-engine/src/database/: hybrid_layer.rs  mod.rs
core-engine/src/hedera/: client.rs  consensus.rs  knowledge_graph.rs  mod.rs
core-engine/src/integrations/: hedera_integration.rs  mod.rs
core-engine/src/llm/: anthropic.rs  conversation.rs  mod.rs  openai.rs
core-engine/src/proto/: mod.rs
core-engine/src/security/: credential_manager.rs  health_monitor.rs  mod.rs  tenant_isolation.rs
core-engine/src/server/: axum.rs  grpc.rs  mod.rs  sirsi_service_impl.rs  websocket.rs
core-engine/src/services/: ai_infrastructure_service.rs  mod.rs  port_registry.rs  sirsi_persona.rs
core-engine/tests/: ai_service_integration_test.rs  cockroachdb_integration.rs  multi_cloud_orchestration_test.rs  user_model_e2e.rs
demo/: demo-setup.sh
docs-backup/: 404.html  Business_Case_and_ROI_Documentation.html  Business_Case_and_ROI_Documentation.md  GITHUB_PAGES_RESUMPTION_PROMPT.md  INVESTOR_PORTAL_STATUS.md  Market_Analysis_and_Competitive_Positioning.html  Market_Analysis_and_Competitive_Positioning.md  Market_Analysis_and_Competitive_Positioning.rtf  PORTAL_TEST_VERIFICATION.md  PORT_MANAGEMENT.md  Product_Roadmap_and_Go_To_Market_Strategy.html  Product_Roadmap_and_Go_To_Market_Strategy.md  QUICK_ACCESS_URLS.md  README.md  app-login.md  business-case.html  business-doc-style.css  committee-index.html  committee-style.css  documentation.html  getting-started.md  index.html  index.md  index.txt  index_broken.html  investor-login.md  investor-portal.html  market-analysis.html  privacy-policy.html  product-roadmap.html  signup-newsletter.md  signup.html  sirsi-live-demo.md  styles.css  template-modern.html  terms-of-service.html  test-theme.html
(+562 files in other folders)
