[package]
name = "sirsi-nexus"
version = "0.7.6-alpha"
edition = "2021"
description = "SirsiNexus - Generative AI Infrastructure Assistant"
authors = ["SirsiNexus Team"]
license = "MIT"
repository = "https://github.com/sirsinexus/sirsi-nexus"
keywords = ["generative-ai", "infrastructure", "assistant", "cloud", "automation"]
categories = ["command-line-utilities", "web-programming"]

# Single unified binary entry point
[[bin]]
name = "sirsi-nexus"
path = "src/main.rs"

# Library for internal components
[lib]
name = "sirsi_core"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-core = "0.3.4"
axum-macros = "0.3.8"
hyper = { version = "0.14" }
k8s-openapi = { version = "0.20", features = ["v1_27"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }

# gRPC and Protobuf - Updated for security
tonic = { version = "0.12", features = ["transport", "codegen"] }
tonic-build = { version = "0.12", features = ["prost"] }
tonic-reflection = "0.12"
tokio-stream = "0.1"
prost = "0.13"
prost-types = "0.13"

# OpenTelemetry - Updated with compatible versions
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "tls", "tls-roots"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"

# Database (CockroachDB uses PostgreSQL protocol)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "chrono", "ipnetwork"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = { version = "0.15", features = ["yaml"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Utilities
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
futures = "0.3"
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

# Redis for agent context storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Vector Database for AI/ML workloads (temporarily disabled for CI)
# qdrant-client = "1.5.0"

# WebSocket server dependencies
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Agent Framework Dependencies - Enhanced AWS Integration
aws-sdk-ec2 = "1.66"
aws-sdk-s3 = "1.66"
aws-sdk-rds = "1.66"
aws-sdk-lambda = "1.66"
aws-sdk-ecs = "1.66"
aws-sdk-pricing = "1.66"
aws-config = "1.1"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
tokio-util = "0.7"
clap = { version = "4.4", features = ["derive"] }

# AI Intelligence Dependencies
async-openai = "0.20"
base64 = "0.22"

# Azure SDK Dependencies - Real Integration
azure_core = "0.25"
azure_identity = "0.25"
azure_mgmt_compute = "0.21"
azure_mgmt_storage = "0.21"
azure_mgmt_resources = "0.21"

# GCP SDK Dependencies - Real Integration
gcp_auth = "0.12"
yup-oauth2 = "12.1.0"
google-cloud-storage = "0.24.0"
google-cloud = "0.2.1"

# Additional dependencies for observability and HTTP
warp = "0.3"
rand = "0.8"
hostname = "0.3"
toml = "0.8"
# Replace unmaintained dotenv with dotenvy
dotenvy = "0.15"

# WASM Runtime for Dynamic Agent Loading - Updated for security
wasmtime = "26.0"
wat = "1.0"
md5 = "0.7"

# Encryption and Security
aes-gcm = "0.10.0"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
typenum = "1.0"

# Hedera DLT Integration Dependencies
fastrand = "2.0"

# Additional dependencies for enhanced functionality
regex = "1.10"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3.0"
tempfile = "3.20.0"
# Replace with dotenvy
dotenvy = "0.15"

